# FreshStackableDataPlatform

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY.md  WORKLOG.md  docker-compose.yml  focus-test.csv  mkdocs.yml  platform-config.yaml  referentiearchitectuur-uwv-data-analytics.md  requirements-compliant-data-analyseplatform.md  requirements-docs.txt  uwv-platform-adr-0002-iceberg-vs-delta.md  uwv-platform-mapping-research.md  uwv-platform-master-agent-prompt-v2.md
.devcontainer/: devcontainer.json  post-create.sh
ci/: yamllint.yaml
data-generation/: README.md  load_to_kafka.py  load_to_minio_staging.py  load_to_s3.py  pyproject.toml
data-generation/generators/: __init__.py  _common.py  crm.py  fez.py  persona.py  polisadministratie.py  wajong.py  wia.py  ww.py  zw.py
data-generation/k8s/: seed-job.yaml
data-generation/tests/: test_bsn_checksum.py  test_persona.py
dbt/: .dockerignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.template
docs/: README.md  access-request-guide.md  architecture.md  compliance-mapping.md  context-summary.md  deployment-modes.md  documentation-gap-report.md  improvements.md  index.md  redesign-inventory.md  runbook.md  security.md  tags.md
opa-policies-src/: Makefile  README.md
platform/: README.md
portal/: .dockerignore  .gitignore  Dockerfile  Dockerfile.academy  README.md  astro.config.mjs  nginx.compose.conf  nginx.conf  package-lock.json  package.json  tsconfig.json
scripts/: README.md  add-kafka-bronze-lineage.py  alert-test.sh  bootstrap.sh  (+26 more)
(+628 files in other folders)
