[project]
name = "uwv-data-generation"
version = "0.1.0"
description = "Synthetische data-generators voor het UWV referentie-platform. Geen echte data."
requires-python = ">=3.11"
authors = [{name = "UWV Reference Platform contributors"}]
license = {text = "Apache-2.0"}

dependencies = [
    "faker>=30.0",
    "kafka-python>=2.0",
    "click>=8.1",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generators"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # ruff formatter handelt line-length af

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
